--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -75,11 +75,11 @@
                     <a href="/Usuario/Login" style="margin-left: 10px;">Login</a>
                 </span>
                 <div class="dropdown-content" style="display: none; position: absolute; background-color: #f9f9f9; width: 200px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; padding: 8px; border-radius: 3%;">
-                    <a href="/Usuario/UsuarioIndex" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                    <a href="/Usuario/Index" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
                         <i class="fa fa-users" aria-hidden="true" style="margin-right: 8px;"></i>
                         Usuarios
                     </a>
-                    <a href="AgendamentoIndex.html" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                    <a href="/Agendamento/Index" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
                         <i class="fa fa-calendar" aria-hidden="true" style="margin-right: 8px;"></i>
                         Agendamento Admin
                     </a>
