--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -83,15 +83,15 @@
                         <i class="fa fa-calendar" aria-hidden="true" style="margin-right: 8px;"></i>
                         Agendamento Admin
                     </a>
-                    <a href="AgendamentoIndex.html" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                    <a href="/Agendamento/GerenciamentoAgendamentoUsuario" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
                         <i class="fa fa-calendar" aria-hidden="true" style="margin-right: 8px;"></i>
                         Agendamento User
                     </a>
-                    <a href="AgendamentoCliente.html" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                    <a href="/Agendamento/CadastroAgendamento" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
                         <i class="fa fa-address-card" aria-hidden="true" style="margin-right: 8px;"></i>
                         Cadastro Agendamento
                     </a>
-                    <a href="ServicoIndex.html" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                    <a href="/Servico/Index" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
                         <i class="fas fa-gavel fa-lg" aria-hidden="true" style="margin-right: 8px;"></i>
                         Serviços
                     </a>
@@ -101,8 +101,7 @@
                     </a>
                 </div>
             </div>         
-            <!-- Menubar -->
-            <div class="fas fa-bars" id="menu-btn"></div>
+            </nav>
 
     </header>
 
