--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
     <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="~/css/main.css" />
     <link rel="stylesheet" href="~/css/responsive.css" />
+    <link rel="stylesheet" href="~/css/usuario_index.css" />
+    <link rel="stylesheet" href="~/css/agendamento_cliente.css" />
+    <link href="~/css/submenu.css" rel="stylesheet" />
 </head>
 <body>
     <header class="header">
@@ -87,7 +90,7 @@
                         <i class="fa fa-calendar" aria-hidden="true" style="margin-right: 8px;"></i>
                         Agendamento User
                     </a>
-                    <a href="/Agendamento/CadastroAgendamento" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                    <a href="/Agendamento/AgendamentoCliente" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
                         <i class="fa fa-address-card" aria-hidden="true" style="margin-right: 8px;"></i>
                         Cadastro Agendamento
                     </a>
