--- a/Views/Agendamento/AgendamentoCliente.cshtml
+++ b/Views/Agendamento/AgendamentoCliente.cshtml
@@ -1,33 +1,9 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_LayoutGerenciamento.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adicionar Agendamento</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/lib/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="~/lib/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/usuario_index.css">
-
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-</head>
 <body>
-    <header class="container">
-        <h1 class="section-title">
-            <a href="index.html"><img src="~/images/Home/logo.png" alt="About-Image"></a>
-        </h1>
-    </header>
-
-
+   
     <section class="maneger-page-section">
         <div class="container page-maneger">
 
@@ -181,4 +157,3 @@
         });
     }
 </script>
-</html>
