--- a/Views/Agendamento/GerenciamentoAgendamentoUsuario.cshtml
+++ b/Views/Agendamento/GerenciamentoAgendamentoUsuario.cshtml
@@ -1,13 +1,8 @@
 ﻿@{
     Layout = "~/Views/Shared/_LayoutGerenciamento.cshtml";
 }
-<body>
-    <header class="container">
-        <h1 class="section-title">
-            <a href="index.html"><img src="~/images/Home/logo.png" alt="About-Image"></a>
-        </h1>
-    </header>
 
+<body>
 
     <section class="maneger-page-section">
         <div class="container page-maneger">
@@ -74,14 +69,13 @@
                     </td>
                     <td class="text-center">
                         <button class="btn btn-default"
-                              
                                 data-bs-toggle="modal" data-bs-target="#EditarUsuario">
                             <i class="fa fa-edit"></i>
                         </button>
                     </td>
                     <td class="text-center">
                         <button class="btn btn-default"
-                                onclick="definirExc('item.Id', 'item.Nome', 'item.Email', 'item.Telefone')"
+                                onclick="definirExc('Id', 'Nome', 'Email', 'Telefone')"
                                 data-bs-toggle="modal" data-bs-target="#ExcluirUsuario">
                             <i class="fa fa-trash text-danger"></i>
                         </button>
@@ -290,13 +284,13 @@
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                 <div>
                     <button type="button" id="send-button2" class="nav-link active btn btn-danger btn-block"
-                            style="flex: 1; margin-left: 5px;" onclick="window.location.href = '/Home/index';">
+                            style="flex: 1; margin-left: 5px;" onclick="window.location.href = '/Home/Index';">
                         Voltar
                     </button>
                 </div>
             </div>
         </section>
-       
+
         <script>
 
             function definirEdt(id, Nome, Email, Senha, TipoUsuario, Telefone) {
