--- a/Views/Shared/_LayoutGerenciamento.cshtml
+++ b/Views/Shared/_LayoutGerenciamento.cshtml
@@ -11,23 +11,60 @@
     <link href="~/lib/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="~/lib/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/usuario_index.css">
+    <link href="~/css/submenu.css" rel="stylesheet" />
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
 </head>
 <body>
+    <br />
     <header class="header">
 
-        <!-- Logo -->
-        <a class="logo" href="#home" style="display: flex; align-items: center; text-decoration: none;">
-            <img src="~/images/Home/download.png" alt="About-Image"
-                 style="width: 50px; height: 50px; margin-right: 10px;">
-            <h2 style="margin: 0; font-size: 24px;">Maqcenter</h2>
-        </a>
-        <!-- Logo End -->
+        <h1 class="section-title">
+            <a href="index.html"><img src="~/images/Home/logo.png" alt="About-Image"></a>
+        </h1>
         <!-- Navbar -->
-     
+        <nav class="navbar" style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap;">
+            <span style="display: flex; align-items: center; margin-right: 20px;">
+                <i class="fas fa-home fa-lg" aria-hidden="true"></i>
+                <a href="/Home/Index" style="margin-left: 10px;">Inicio</a>
+            </span>
+
+            <div class="dropdown" style="position: relative; display: inline-block;">
+                <span style="display: flex; align-items: center; margin-right: 20px;">
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <a href="/Usuario/Login" style="margin-left: 10px;">Login</a>
+                </span>
+                <div class="dropdown-content" style="display: none; position: absolute; background-color: #f9f9f9; width: 200px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; padding: 8px; border-radius: 3%;">
+                    <a href="/Usuario/Index" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                        <i class="fa fa-users" aria-hidden="true" style="margin-right: 8px;"></i>
+                        Usuarios
+                    </a>
+                    <a href="/Agendamento/Index" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                        <i class="fa fa-calendar" aria-hidden="true" style="margin-right: 8px;"></i>
+                        Agendamento Admin
+                    </a>
+                    <a href="/Agendamento/GerenciamentoAgendamentoUsuario" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                        <i class="fa fa-calendar" aria-hidden="true" style="margin-right: 8px;"></i>
+                        Agendamento User
+                    </a>
+                    <a href="/Agendamento/AgendamentoCliente" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                        <i class="fa fa-address-card" aria-hidden="true" style="margin-right: 8px;"></i>
+                        Cadastro Agendamento
+                    </a>
+                    <a href="/Servico/Index" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                        <i class="fas fa-gavel fa-lg" aria-hidden="true" style="margin-right: 8px;"></i>
+                        Serviços
+                    </a>
+                    <a href="#logout" style="color: black; padding: 7px; text-decoration: none; display: flex; align-items: center; margin: 5px;">
+                        <i class="fa fa-book" aria-hidden="true" style="margin-right: 8px;"></i>
+                        Relatório
+                    </a>
+                </div>
+            </div>
+        </nav>
+     </header>
     <div>
         <main>
             @RenderBody()
@@ -42,5 +79,15 @@
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Script to handle the dropdown functionality
+        document.querySelector('.dropdown').addEventListener('mouseover', function () {
+            this.querySelector('.dropdown-content').style.display = 'block';
+        });
+
+        document.querySelector('.dropdown').addEventListener('mouseout', function () {
+            this.querySelector('.dropdown-content').style.display = 'none';
+        });
+    </script>
 </body>
 </html>
